--- a/blog/themes/matery/layout/_partial/head.ejs
+++ b/blog/themes/matery/layout/_partial/head.ejs
@@ -68,6 +68,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="google-site-verification" content="NR9z9YlARbPVQUKINtnR9FcFRcK-GouetL7C350nOKw" /><!-- google search HTML标记 -->
     <title><%= pageTitle %></title>
     <link rel="icon" type="<%= iconType %>" href="<%- theme.favicon %>">
 
