--- a/themes/matery/layout/_partial/head.ejs
+++ b/themes/matery/layout/_partial/head.ejs
@@ -78,6 +78,7 @@
     <link rel="stylesheet" type="text/css" href="<%- theme.libs.css.lightgallery %>">
     <link rel="stylesheet" type="text/css" href="/css/matery.css">
     <link rel="stylesheet" type="text/css" href="/css/my.css">
+    <link rel="stylesheet" href="<%- theme.libs.css.kanban %>">
     <style type="text/css">
         <% if (!theme.code.break) { %>
         code[class*="language-"], pre[class*="language-"] {
@@ -85,6 +86,6 @@
         }
         <% } %>
     </style>
-
+    <script src="<%- theme.libs.js.kanban %>"></script>
     <script src="<%- theme.libs.js.jquery %>"></script>
 </head>
